# async-rest-client

./: README.md  pyproject.toml
async_rest_client/core/: rest.py
examples/: simple-service-client.py
