[tool.poetry]
name = "async-rest-client"
version = "0.1.0"
description = "Simple rest client built on async requests"
authors = ["Mathias Nisted Velling <mnvdk@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
flake9 = "^3.8.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
